# Vibe

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
Core/: Object.h
Core/Data/: RangedNumber.cpp  RangedNumber.h
Core/Envelopes/: CalculationType.h  Envelope.cpp  Envelope.h  EnvelopeStage.h  InterpolationType.h
Core/Sources/: Source.cpp  Source.h
Core/Waves/: Waveform.cpp  Waveform.h
Core/Waves/Periodic/: PeriodicWave.cpp  PeriodicWave.h  SawtoothWave.cpp  SawtoothWave.h  SineWave.cpp  SineWave.h  SquareWave.cpp  SquareWave.h  TriangleWave.cpp  TriangleWave.h
Core/Waves/Random/: RandomWave.cpp  RandomWave.h  WhiteNoise.cpp  WhiteNoise.h
Engine/: Engine.cpp  Engine.h
OpenAL/include/AL/: al.h  alc.h
Utilities/: vconcepts.h  vdefaults.h  vmath.h  vtypes.h
